Fixed scrollbar: #3

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -8,6 +8,11 @@
 	}
 }
 
+@mixin scroll-base {
+	scrollbar-color: $grey $darkGrey;
+	scrollbar-width: auto;
+}
+
 @mixin flex-base {
 	justify-content: center;
 	align-items: center;
